# storage/api-docs/api-docs.json
@@ -179,6 +179,88 @@
                 }
             }
         },
+        "/api/bills/{billId}": {
+            "get": {
+                "tags": [
+                    "bills"
+                ],
+                "summary": "Find bill by ID",
+                "operationId": "6b6d7a86adaf95d498b31a3a602fddaa",
+                "parameters": [
+                    {
+                        "name": "billId",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "properties": {
+                                                "bill_id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "referral_id": {
+                                                    "type": "integer"
+                                                },
+                                                "amount": {
+                                                    "type": "number",
+                                                    "format": "double"
+                                                },
+                                                "notes": {
+                                                    "type": "string"
+                                                },
+                                                "sent_to": {
+                                                    "type": "string"
+                                                },
+                                                "sent_date": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "bill_file": {
+                                                    "type": "string"
+                                                },
+                                                "created_by": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "created_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "deleted_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                },
+                                                "updated_at": {
+                                                    "type": "string",
+                                                    "format": "date-time"
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "statusCode": {
+                                            "type": "integer",
+                                            "example": 200
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/hospitals": {
             "get": {
                 "tags": [
